Full panama